--- a/index.html
+++ b/index.html
@@ -5,84 +5,168 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Bienvenida Mariana</title>
   <style>
-    :root{--red1:#a30b0b;--red2:#ff4343;--card:#fff4f4}
-    html,body{height:100%;margin:0;font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial}
-    body{
-      background: linear-gradient(135deg,var(--red1),var(--red2));
-      display:flex;align-items:center;justify-content:center;padding:24px;color:#2b0202
+    :root{--accent:#8b0000}
+    body {
+      background-color: #ffffff;
+      margin: 0;
+      font-family: Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
+      color: #2b0202;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      padding: 24px;
+      box-sizing: border-box;
     }
-    .wrap{width:100%;max-width:760px;background:rgba(255,255,255,0.06);backdrop-filter:blur(6px);border-radius:18px;padding:26px;box-shadow:0 8px 30px rgba(0,0,0,0.35);position:relative;overflow:hidden}
-    .wrap::before{content:"";position:absolute;inset:0;background-image:radial-gradient(circle at 20% 20%, rgba(255,255,255,0.02), transparent 2px), radial-gradient(circle at 80% 80%, rgba(0,0,0,0.03), transparent 2px);pointer-events:none}
-    header{display:flex;gap:16px;align-items:center}
-    h1{margin:0;font-size:28px}
-    .subtitle{margin:6px 0 18px;opacity:0.95}
-    .main-grid{display:grid;grid-template-columns:220px 1fr;gap:18px;align-items:start}
-    .card{background:var(--card);padding:14px;border-radius:12px}
-    .cat-box{display:flex;align-items:center;justify-content:center;height:220px}
-    textarea{width:100%;min-height:140px;border-radius:10px;border:2px solid rgba(0,0,0,0.08);padding:12px;font-size:15px;resize:vertical}
-    label{font-weight:600;font-size:14px}
-    .btn{display:inline-block;margin-top:10px;padding:10px 16px;border-radius:10px;border:0;background:#8b0000;color:white;font-weight:700;cursor:pointer}
-    .thanks{display:none;padding:16px;border-radius:12px;background:rgba(255,255,255,0.08);margin-top:12px}
-    .roses{position:absolute;right:-40px;top:-40px;font-size:46px;opacity:0.18;transform:rotate(20deg);}
-    footer{margin-top:12px;font-size:13px;opacity:0.95}
-    @media(max-width:640px){.main-grid{grid-template-columns:1fr;}.cat-box{height:160px}}
+    .container {
+      width: 100%;
+      max-width: 700px;
+      text-align: center;
+      border-radius: 12px;
+      padding: 20px;
+      box-shadow: 0 8px 30px rgba(0,0,0,0.08);
+      background: #fff;
+    }
+    h1 {
+      font-size: 28px;
+      margin: 8px 0 16px;
+    }
+    .cat-slot{
+      width: 160px;
+      height: 160px;
+      margin: 0 auto 14px;
+      display:flex;align-items:center;justify-content:center;border-radius:8px;border:2px dashed #eee;background:#fafafa;
+      font-size:48px;color:#bbb;
+    }
+    textarea {
+      width: 100%;
+      min-height: 120px;
+      border-radius: 10px;
+      border: 2px solid #ccc;
+      padding: 12px;
+      font-size: 15px;
+      resize: vertical;
+      box-sizing: border-box;
+    }
+    button {
+      margin-top: 12px;
+      padding: 10px 16px;
+      border-radius: 8px;
+      border: none;
+      background-color: var(--accent);
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    .note{margin-top:10px;color:#666;font-size:13px}
+
+    /* Modal fallback styles (full-screen) */
+    .overlay{
+      position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,0.5);z-index:9999;padding:20px;box-sizing:border-box
+    }
+    .overlay.show{display:flex}
+    .overlay .panel{background:#fff;padding:28px;border-radius:12px;max-width:700px;width:100%;text-align:center}
+    .overlay .panel h2{margin:0 0 12px;color:var(--accent);font-size:22px}
+    .overlay .panel p{font-size:18px;margin:8px 0}
+    .overlay .panel button{margin-top:14px}
+
   </style>
 </head>
 <body>
-  <div class="wrap" role="main">
-    <div class="roses">🌹🌹🌹</div>
-    <header>
-      <div>
-        <h1>bienvenida Mariana <span aria-hidden>😼</span></h1>
-        <div class="subtitle">Este espacio es tuyo: cuenta lo que necesites. 🌹</div>
-      </div>
-    </header>
+  <div class="container">
+    <h1>Bienvenida Mariana 😼</h1>
 
-    <div class="main-grid">
-      <div class="card">
-        <div class="cat-box" aria-hidden="true">
-          <img src="6e2128cd-f7a2-4f33-ab2e-fdc9d6e66fd9.png" alt="Gato divertido" style="max-width:100%;border-radius:12px;object-fit:cover;height:100%;">
-        </div>
-      </div>
+    <!-- Aquí va la imagen del gato (coloca 'gato.png' junto al HTML o cambia el src) -->
+    <div class="cat-slot" aria-hidden="true" id="catSlot">😼</div>
 
-      <div>
-        <form id="quejaForm" class="card" aria-labelledby="formTitle">
-          <div id="formTitle" style="display:none">Formulario de queja para Mariana</div>
-          <label for="queja">Tu queja, Mariana:</label>
-          <textarea id="queja" name="queja" placeholder="Escribe aquí lo que quieras contarnos..."></textarea>
-          <div>
-            <button type="submit" class="btn">Enviar</button>
-          </div>
-          <div id="thanks" class="thanks" role="status" aria-live="polite"></div>
-        </form>
+    <form id="quejaForm">
+      <label for="queja">Tu queja, Mariana:</label><br>
+      <textarea id="queja" name="queja" placeholder="Escribe aquí lo que quieras contarnos..."></textarea><br>
+      <button type="submit">Enviar</button>
+      <div class="note">Al enviar se abrirá una nueva pestaña con la confirmación. Si el navegador la bloquea, verás el mensaje aquí mismo.</div>
+    </form>
+  </div>
 
-        <footer>Al enviar, verás un mensaje de confirmación. Conserva una copia si lo deseas.</footer>
-      </div>
+  <!-- Modal / fallback cuando no se puede abrir o escribir en nueva pestaña -->
+  <div id="fallbackOverlay" class="overlay" role="dialog" aria-modal="true">
+    <div class="panel">
+      <h2>Gracias 👌</h2>
+      <p id="fallbackMessage">Gracias por escribir tu queja, en un mes recibirás respuesta 👌</p>
+      <button id="closeOverlay">Cerrar</button>
     </div>
   </div>
 
   <script>
-    const form = document.getElementById('quejaForm');
-    const thanks = document.getElementById('thanks');
-    form.addEventListener('submit', (e)=>{
-      e.preventDefault();
-      const text = document.getElementById('queja').value.trim();
-      if(!text){
-        thanks.style.display = 'block';
-        thanks.textContent = 'Por favor escribe tu queja antes de enviar.';
-        return;
-      }
-      form.querySelector('button').disabled = true;
-      thanks.style.display = 'block';
-      thanks.innerHTML = '<strong>Gracias.</strong> En un mes recibirás respuesta. <em>Claro que sí la recibirás.</em>';
-      const stored = JSON.parse(sessionStorage.getItem('quejas_mariana') || '[]');
-      stored.push({texto:text,timestamp:new Date().toISOString()});
-      sessionStorage.setItem('quejas_mariana', JSON.stringify(stored));
-      setTimeout(()=>{
-        document.getElementById('queja').value = '';
-        form.querySelector('button').disabled = false;
-      },1200);
-    });
+    (function(){
+      const form = document.getElementById('quejaForm');
+      const overlay = document.getElementById('fallbackOverlay');
+      const closeOverlay = document.getElementById('closeOverlay');
+
+      // If you want to show the actual uploaded image, set it here (optional):
+      // document.getElementById('catSlot').innerHTML = '<img src="gato.png" alt="Gato" style="max-width:100%;height:100%;object-fit:cover;border-radius:6px">';
+
+      form.addEventListener('submit', (e) => {
+        e.preventDefault();
+        const text = document.getElementById('queja').value.trim();
+        if (!text) {
+          alert('Por favor escribe tu queja antes de enviar.');
+          return;
+        }
+
+        // Guardar localmente (simulación)
+        try{
+          const stored = JSON.parse(sessionStorage.getItem('quejas_mariana') || '[]');
+          stored.push({texto:text,timestamp:new Date().toISOString()});
+          sessionStorage.setItem('quejas_mariana', JSON.stringify(stored));
+        }catch(err){
+          // si sessionStorage falla, no bloqueamos el flujo
+          console.warn('No se pudo guardar en sessionStorage.', err);
+        }
+
+        // Intentamos abrir nueva pestaña y escribir en ella
+        let nuevaVentana = null;
+        try{
+          nuevaVentana = window.open('', '_blank');
+        }catch(err){
+          nuevaVentana = null;
+        }
+
+        // Comprobar si la ventana fue creada y si podemos acceder a su documento
+        const canWriteNewWindow = nuevaVentana && typeof nuevaVentana.document !== 'undefined' && nuevaVentana.document;
+
+        if (canWriteNewWindow) {
+          try {
+            nuevaVentana.document.open();
+            nuevaVentana.document.write(`<!doctype html><html lang='es'><head><meta charset='utf-8'><title>Gracias</title>
+              <meta name=\"viewport\" content=\"width=device-width,initial-scale=1\"> 
+              <style>body{background:#fff;display:flex;align-items:center;justify-content:center;height:100vh;margin:0;font-family:Inter,system-ui,Arial;color:var(--accent);text-align:center}h1{font-size:28px;color:#8b0000}</style>
+              </head><body><h1>Gracias por escribir tu queja, en un mes recibirás respuesta 👌</h1></body></html>`);
+            nuevaVentana.document.close();
+
+            // foco opcional
+            try{ nuevaVentana.focus(); }catch(e){}
+            return; // ya mostramos en nueva ventana
+          } catch (err) {
+            // Si algo falla al escribir, caemos al fallback
+            console.warn('No fue posible escribir en la nueva ventana:', err);
+          }
+        }
+
+        // FALLBACK: mostrar modal en la misma página
+        document.getElementById('fallbackMessage').textContent = 'Gracias por escribir tu queja, en un mes recibirás respuesta 👌';
+        overlay.classList.add('show');
+      });
+
+      closeOverlay.addEventListener('click', () => {
+        overlay.classList.remove('show');
+      });
+
+      // cerrar overlay al pulsar ESC
+      document.addEventListener('keydown', (e)=>{
+        if(e.key === 'Escape') overlay.classList.remove('show');
+      });
+
+    })();
   </script>
 </body>
 </html>
